# Galad-Scott

./: .git-aliases  .gitignore  404.html  CHANGELOG.md  CHANGELOG_EN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RELEASE_README.md  TODO  bouton.txt  build.spec  description.txt  galad_islands_arcade.sh  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run_tests.py  setup_dev.py  test_gamepad.py
.github/workflows/: build.yml  docs.yml  manual-release.yml  release.yml  run-tests.yml  test-build.yml  version-bump.yml
assets/: README_ASSETS.md
assets/docs/: credits.md  credits_en.md  help.md  help_en.md  scenario.md  scenario_en.md
assets/locales/: english.py  french.py
docs/en/: index.md  support.md
docs/fr/: index.md  support.md
hooks/: post-checkout
scripts/: bump-version.sh  clean-changelog.py
scripts/benchmark/: analyze_benchmark.py  benchmark.py  demo_benchmarks.py  read_benchmark_csv.py
scripts/sound-convert/: sound-convert.sh
search/: search_index.json
setup/: README.md  install_commitizen_universal.py  install_hooks_with_bump.py  setup.py  setup_team_hooks.py  test_hooks.py
site/: index.html  sitemap.xml
site/support/: index.html
src/: game.py  rail_shooter.py  version.py
src/constants/: assets.py  constants.py  gamepad_bindings.py  gameplay.py  key_bindings.py  map_tiles.py  team.py  tipsContact.py  unitType.py
src/factory/: buildingFactory.py  unitFactory.py  unitType.py
src/functions/: afficherModale.py  arcade_menus.py  buildingCreator.py  handleHealth.py  optionsWindow.py  projectileCreator.py  resource_path.py
src/initialization/: sprite_init.py
src/managers/: audio.py  display.py  font_cache.py  gamepad_manager.py  island_resource_manager.py  sprite_manager.py  surface_cache.py  tutorial_manager.py
src/menu/: state.py
src/processeurs/: CapacitiesSpecialesProcessor.py  KnownBaseProcessor.py  collisionProcessor.py  combatRewardProcessor.py  eventProcessor.py  explosionSoundProcessor.py  flyingChestProcessor.py  lifetimeProcessor.py  movementProcessor.py  playerControlProcessor.py  stormProcessor.py  towerProcessor.py
src/settings/: controls.py  docs_manager.py  localization.py  resolutions.py  settings.py
src/systems/: __init__.py  combat_system.py  physics_system.py  sprite_system.py  vision_system.py
src/ui/: action_bar.py  arcade_error.py  boutique.py  crash_window.py  debug_modal.py  exit_modal.py  generic_modal.py  ingame_menu_modal.py  intro_cinematic.py  notification_system.py  settings_ui_component.py  show_gamemode_selection_modal.py  (+5 more)
tests/: README.md  conftest.py  profile_game.py  test_audio_manager.py  test_components.py  test_display_manager.py  test_event_tutorials.py  test_integration.py  test_intro_cinematic.py  test_knockback.py  test_localization.py  test_options_resolution_restart.py  test_performance.py  test_processors.py  test_rail_shooter.py  test_scout_angle_variation.py  test_tips.py  test_tutorial_manager.py  test_update_notification.py  test_utils.py
tools/: galad_config.py  package_release.ps1  package_release.sh
(+186 files in other folders)
